--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <span class="primary-color">kalian</span>
                         </h3>
                         <p>
-                            menyediakan makanan dan minuman sehat dan tidak membuat lapar dan haus lagi. Buruan Order Keburu Habis. Untuk Order Ada Di bawah
+                            menyediakan smartphone dengan harga termurah. Buruan Order Keburu Habis. Untuk Order Ada Di bawah
                         </p>
                     </div>
                 </div>
@@ -539,34 +539,7 @@
         </div>
     </section>
     <!-- END TESTIMONIAL SECTION -->
-    <!-- contact -->
-    <div class="container-fluid pt-5 pb-5 bg-light">
-        <div class="container align-items-center">
-            <h2 class="display-3" id="contact">Kelompok Kami</h2>
-            <p></p>
-            <br>
-            <div class="row pt-5 gx-5 gy-5">
-                <div class="col-md-6 align-items-center tim">
-                    <h4>William Yuen</h4>
-                    <img src="aset/img/aditya.jpg" class="rounded-circle mb-3">
-                    <p class="text-center">
-                        <a href="https://www.instagram.com/yuen.william.98/" class="social"><h9>My instagram</h9></a>
-                        <h8>Can Contact me with Gmail : williamyuen672@gmail.com</h8>
-                    </p>
-                </div>
-                <div class="col-md-6 text-center tim">
-                    <h4>Windi Melani</h4>
-                    <img src="aset/img/ibnu.jpeg" class="rounded-circle mb-3">
-                    <p class="text-center">
-                        <a href="https://www.instagram.com/windymelani84/" class="social"><h9>My Instagram</h9>
-                        <h8>Can Contact me with Gmail : </h8>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
     
-    <!-- akhir contact -->
     <!-- FOOTER SECTION -->
     <section class="footer bg-img" style="background-image: url(assets/GalaxyA42-5G_Variants-scaled.jpg);">
         <div class="container">
